# linguine

./: .gitignore  CMakeLists.txt  CNAME  DESIGN.md
alfredo/: CMakeLists.txt
alfredo/src/: main.mm
alfredo/src/appkit/: AlfredoApplicationDelegate.h  AlfredoApplicationDelegate.mm
alfredo/src/metalkit/: AlfredoViewDelegate.h  AlfredoViewDelegate.mm
alfredo/src/platform/: MacAudioEngineFileLoader.h  MacAudioEngineFileLoader.mm  MacInputManager.h  MacInputManager.mm  MacLeaderboardManager.cpp  MacLeaderboardManager.h  MacLifecycleManager.h  MacLifecycleManager.mm  MacLogger.h  MacLogger.mm  MacMetalTextureLoader.h  MacMetalTextureLoader.mm  MacSaveManager.h  MacTimeManager.cpp  MacTimeManager.h  MacUrlHander.h  MacUrlHandler.mm
alfredo/src/render/: MTKRenderer.cpp  MTKRenderer.h  MetalRenderer.cpp  MetalRenderer.h
audio/audioengine/: CMakeLists.txt
audio/audioengine/include/: AudioEngineAudioManager.h  AudioEngineFileLoader.h
audio/audioengine/src/: AudioEngineAudioManager.mm  AudioEngineFileLoader.mm
audio/openal/: CMakeLists.txt
audio/openal/include/: OpenALAudioManager.h  OpenALFileLoader.h
audio/openal/src/: OpenALAudioManager.cpp
carbonara/: CMakeLists.txt  settings.gradle.kts
carbonara/app/: build.gradle.kts
carbonara/app/src/main/: AndroidManifest.xml
carbonara/gradle/wrapper/: gradle-wrapper.properties
linguine/: CMakeLists.txt
linguine/include/: AudioManager.h  Engine.h  InputManager.h  LeaderboardManager.h  LifecycleManager.h  Logger.h  Renderer.h  SaveManager.h  Scene.h  SceneManager.h  ServiceLocator.h  System.h  TimeManager.h  UrlHandler.h
linguine/include/audio/: AudioManager.h  EffectType.h  Mode.h  SongType.h
linguine/include/entity/: Component.h  Entity.h  EntityManager.h  EntityManagerFactory.h  Result.h
linguine/include/input/: InputManager.h  Key.h
linguine/include/renderer/: Camera.h  Layer.h  RenderBackend.h  Renderable.h  Renderer.h  Viewport.h
linguine/include/renderer/features/: CircleFeature.h  ColoredFeature.h  FeatureRenderer.h  ProgressFeature.h  QuadFeature.h  RenderFeature.h  SelectableFeature.h  TextFeature.h  TriangleFeature.h
linguine/src/: Engine.cpp
linguine/src/components/: Ability.h  AbilityButton.h  AbilityLabel.h  Alive.h  Asteroid.h  Attachment.h  BigHeal.h  Bomb.h  Boost.h  BoundingBox.h  BoxCollider.h  Button.h  CameraFixture.h  Cast.h  Circle.h  CircleCollider.h  Collapse.h  Cooldown.h  CostLabel.h  Dead.h  Dialog.h  Disabled.h  Drawable.h  Earth.h  EffectTracker.h  Emitter.h  Enabled.h  Enqueued.h  Event.h  ExplosionAttack.h  ExternalLink.h  Falling.h  FinishLine.h  Fire.h  Follow.h  Footer.h  FooterPanel.h  Friendly.h  GameOver.h  GlobalCooldown.h  (+64 more)
linguine/src/data/: CubicBezierCurve.h  Grid.cpp  Grid.h  LevelDatabase.h  Palette.h  RaycastHit.h  Spline.h  UnitType.h
linguine/src/data/rooms/: Room.h  (+5 more)
linguine/src/factories/: ProjectileFactory.cpp  ProjectileFactory.h
linguine/src/physics/: QuadTree.cpp  QuadTree.h  World.cpp  World.h
linguine/src/renderer/: Camera.cpp  Renderable.cpp  Renderer.cpp
linguine/src/scenes/: BattleScene.h  BossFightPrototypeScene.h  BulletPrototypeScene.h  GameOverScene.cpp  GameOverScene.h  InfiniteRunnerScene.cpp  InfiniteRunnerScene.h  LeaderboardScene.cpp  LeaderboardScene.h  LevelCompletedScene.cpp  LevelCompletedScene.h  LevelSelectionScene.cpp  LevelSelectionScene.h  MovementPrototypeScene.h  NewPlayerScene.cpp  NewPlayerScene.h  OptionsScene.cpp  OptionsScene.h  PointAndClickPrototypeScene.h  ProceduralPrototypeScene.h  ProgressPrototypeScene.h  ShopScene.h  TestScene.h  TitleScene.cpp  TitleScene.h  TowerPrototypeScene.h  TutorialScene.h
linguine/src/systems/: AIControllerSystem.cpp  AIControllerSystem.h  AttachmentSystem.cpp  AttachmentSystem.h  AttackSystem.cpp  AttackSystem.h  ButtonSystem.cpp  ButtonSystem.h  CameraFollowSystem.cpp  CameraFollowSystem.h  CameraSystem.cpp  CameraSystem.h  CastSystem.cpp  CastSystem.h  CollapseSystem.cpp  CollapseSystem.h  CollisionSystem.cpp  CollisionSystem.h  CompletionSystem.cpp  CompletionSystem.h  CooldownProgressSystem.cpp  CooldownProgressSystem.h  DialogSystem.cpp  DialogSystem.h  DirectionalMovementSystem.cpp  DirectionalMovementSystem.h  EdgeSystem.cpp  EdgeSystem.h  EffectSystem.cpp  EffectSystem.h  EnemyAttackSystem.cpp  EnemyAttackSystem.h  EnemySpawnSystem.cpp  EnemySpawnSystem.h  EnemyTargetingSystem.cpp  EnemyTargetingSystem.h  EventSystem.cpp  EventSystem.h  ExternalLinkSystem.cpp  ExternalLinkSystem.h  (+80 more)
pesto/: CMakeLists.txt
pesto/src/: main.cpp
pesto/src/platform/: WebAudioManager.h  WebInputManager.cpp  WebInputManager.h  WebLeaderboardManager.h  WebLifecycleManager.h  WebLogger.cpp  WebLogger.h  WebOpenALFileLoader.cpp  WebOpenALFileLoader.h  WebOpenGLFileLoader.cpp  WebOpenGLFileLoader.h  WebRenderer.h  WebSaveManager.h  WebTimeManager.cpp  WebTimeManager.h  WebUrlHandler.cpp  WebUrlHandler.h
renderers/metal/: CMakeLists.txt
renderers/metal/include/: MetalRenderBackend.h  MetalRenderer.h  MetalTextureLoader.h
renderers/metal/src/: MetalRenderBackend.cpp  MetalRenderContext.h  MetalRenderer.cpp
renderers/opengl/: CMakeLists.txt
renderers/opengl/include/: OpenGLFileLoader.h  OpenGLRenderBackend.h  OpenGLRenderer.h
renderers/opengl/src/: OpenGLRenderBackend.cpp  OpenGLRenderer.cpp
scampi/: CMakeLists.txt  Info.plist  Info.plist.in
scampi/resources/: Main.storyboard
scampi/scripts/: archive.sh  device.sh  simulator.sh  upload.sh
scampi/src/: ScampiAppDelegate.h  ScampiAppDelegate.mm  main.mm
scampi/src/metalkit/: ScampiViewDelegate.h  ScampiViewDelegate.mm
scampi/src/platform/: IosAudioEngineFileLoader.h  IosAudioEngineFileLoader.mm  IosInputManager.cpp  IosInputManager.h  IosLeaderboardManager.h  IosLeaderboardManager.mm  IosLifecycleManager.cpp  IosLifecycleManager.h  IosMetalTextureLoader.h  IosMetalTextureLoader.mm  IosSaveManager.h  IosSaveManager.mm  IosTimeManager.cpp  IosTimeManager.h  IosUrlHander.h  IosUrlHandler.mm  NSLogger.h  NSLogger.mm
scampi/src/uikit/: ScampiAppDelegate.h  ScampiAppDelegate.mm  ScampiViewController.h  ScampiViewController.mm
(+295 files in other folders)
