add_library(linguine
        src/Engine.cpp
        src/data/spells/actions/Apply.cpp
        src/data/spells/actions/Explosion.cpp
        src/data/spells/actions/MassHeal.cpp
        src/data/spells/actions/ModifyHealth.cpp
        src/data/spells/actions/Revive.cpp
        src/data/spells/effects/Effect.cpp
        src/data/spells/effects/ModifyHealthOverTime.cpp
        src/entity/archetype/Archetype.cpp
        src/entity/archetype/ArchetypeEntityManager.cpp
        src/entity/archetype/ArchetypeResult.cpp
        src/entity/archetype/Query.cpp
        src/entity/archetype/Store.cpp
        src/renderer/Camera.cpp
        src/renderer/Renderable.cpp
        src/renderer/Renderer.cpp
        src/renderer/features/FeatureRenderer.cpp
        src/scenes/GameOverScene.cpp
        src/scenes/InfiniteRunnerScene.cpp
        src/scenes/LeaderboardScene.cpp
        src/scenes/NewPlayerScene.cpp
        src/scenes/OptionsScene.cpp
        src/scenes/TitleScene.cpp
        src/systems/AttachmentSystem.cpp
        src/systems/ButtonSystem.cpp
        src/systems/CameraFollowSystem.cpp
        src/systems/CameraSystem.cpp
        src/systems/CastSystem.cpp
        src/systems/CollapseSystem.cpp
        src/systems/CollisionSystem.cpp
        src/systems/CooldownProgressSystem.cpp
        src/systems/DialogSystem.cpp
        src/systems/EdgeSystem.cpp
        src/systems/EffectSystem.cpp
        src/systems/EventSystem.cpp
        src/systems/FallerSystem.cpp
        src/systems/FireSystem.cpp
        src/systems/FpsSystem.cpp
        src/systems/GestureRecognitionSystem.cpp
        src/systems/HealthProgressSystem.cpp
        src/systems/HudSystem.cpp
        src/systems/LevelTrackingSystem.cpp
        src/systems/LivenessSystem.cpp
        src/systems/ParticleSystem.cpp
        src/systems/PhysicsInterpolationSystem.cpp
        src/systems/PlayerControllerSystem.cpp
        src/systems/RiserSystem.cpp
        src/systems/RotatorSystem.cpp
        src/systems/ScoringSystem.cpp
        src/systems/ShakeSystem.cpp
        src/systems/SpawnSystem.cpp
        src/systems/TitleUiSystem.cpp
        src/systems/ToastSystem.cpp
        src/systems/ToggleSystem.cpp
        src/systems/TransformationSystem.cpp
        src/systems/TutorialSystem.cpp
        src/systems/UpgradeSystem.cpp
        src/systems/VelocitySystem.cpp
)

target_include_directories(linguine PUBLIC
        include
        "${THIRD_PARTY_DIR}/glm"
)

target_include_directories(linguine PRIVATE
        src
)
